[project]
name = "tests"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
  "requests==2.32.5",
  "pytest==9.0.2",
  "defusedxml==0.7.1",
  "playwright==1.58.0",
  "pytest-playwright==0.7.2",
  "pytest-rerunfailures==16.1",
]

[project.optional-dependencies]
dev = ["ruff==0.15.2", "ty==0.0.18"]

[tool.uv]
required-version = "~=0.9.0"
package = false
override-dependencies = ["urllib3==2.6.3"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "T201",    # Ignore print statement (until we have a logger)
  "S101",    # Ignore asserts
  "F811",    # Ignore redefinition of function
  "G004",    # Ignore logging format string
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["tests", "utils"]
